# bazel_test_sets

./: .bazelrc  .gitignore  BUILD.bazel  CLAUDE.md  Dockerfile.devenv  LICENSE  MODULE.bazel  README.md  ci
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
architecture/current/: README.md
architecture/current/components/: burnin.md  ci-gate-rule.md  ci-script.md  ci-tool.md  co-occurrence.md  dag.md  e-values.md  effort.md  executor.md  html-reporter.md  inference.md  judgement.md  log-parser.md  matrix-test-set-macro.md  measurements.md  orchestrator-main.md  parameterized-test-set-macro.md  regression-selector.md  reporter.md  sprt.md  status-file.md  test-set-config.md  test-set-rule.md  test-set-test-rule.md  workspace-discovery.md
architecture/current/flows/: burn-in-lifecycle.md  detection-execution.md  diagnostic-execution.md  e-value-verdict.md  effort-execution.md  manifest-generation.md  regression-selection.md  report-generation.md
architecture/in_development/block-steps/: DESIGN.md  PLAN.md
architecture/in_development/execution-modes-ci-stages/: DESIGN.md  PLAN.md
ci_tool/: BUILD.bazel  __init__.py  main.py  main_test.py
docs/: api-reference.md  burn-in.md  ci-stages.md  execution-modes.md  parameterization.md  regression-mode.md  reporting.md  structured-logging.md  tutorial.md
examples/: .bazelrc  .test_set_config  BUILD.bazel  MODULE.bazel
examples/ci/: BUILD.bazel
examples/ecommerce/: BUILD.bazel  cart_test.py  credit_card_test.py  discount_test.py  email_notification_test.py  inventory_test.py  order_placement_test.py  order_steps_test.py  payment_region_test.py  paypal_test.py  resource_limits_test.py  shipping_test.py  user_login_test.py  user_profile_test.py  user_registration_test.py
examples/ecommerce/.tests/: co_occurrence_graph.json  status
examples/macros_demo/: BUILD.bazel  memory_test.py  memory_tests.bzl  payment_region_test.py  region_tests.bzl
macros/: BUILD.bazel  matrix_test_set.bzl  parameterized_test_set.bzl
macros/examples/: BUILD.bazel  memory_test.py  memory_tests.bzl  region_tests.bzl
orchestrator/: BUILD.bazel  __init__.py  burnin.py  burnin_test.py  co_occurrence_test.py  dag_test.py  executor.py  executor_test.py  html_reporter_test.py  inference.py  inference_test.py  judgement.py  judgement_test.py  log_parser.py  log_parser_test.py  main.py  main_test.py  measurements_test.py  regression_selector.py  regression_selector_test.py  reporter.py  reporter_test.py  sprt_test.py  status_test.py
orchestrator/analysis/: __init__.py  inference_test.py  judgement.py  judgement_test.py  log_parser.py  log_parser_test.py  measurements.py  measurements_test.py
orchestrator/discovery/: __init__.py  workspace.py  workspace_test.py
orchestrator/execution/: __init__.py  dag.py  dag_test.py  effort.py  effort_test.py  executor.py  executor_test.py  exit_code.py  exit_code_test.py  target_hash.py  target_hash_test.py
orchestrator/lifecycle/: __init__.py  burnin.py  burnin_test.py  config.py  config_test.py  e_values.py  sprt.py  sprt_test.py  status.py  status_test.py
orchestrator/lifecycle/backend/: __init__.py  base.py  sqlite.py  sqlite_test.py
orchestrator/regression/: __init__.py  co_occurrence.py  co_occurrence_test.py  regression_selector_test.py
orchestrator/reporting/: __init__.py  html_reporter.py  html_reporter_test.py  reporter.py  reporter_test.py  source_links.py  source_links_test.py
plugins/bazel-test-sets/.claude-plugin/: plugin.json
plugins/bazel-test-sets/agents/ask/: AGENT.md
plugins/bazel-test-sets/agents/author/: AGENT.md
plugins/bazel-test-sets/agents/lifecycle/: AGENT.md
plugins/bazel-test-sets/agents/setup/: AGENT.md
plugins/bazel-test-sets/skills/test-sets/: SKILL.md
rules/: BUILD.bazel  ci_gate.bzl  test_set.bzl  test_set_test.bzl
tests/: BUILD.bazel  ci_gate_runner_test.py  hello.py  sample_dep_test.py  sample_test.py  test_html_reporter_search.py  test_html_reporter_steps.py
tests/integration/: test_end_to_end.py
tst_sdk/: BUILD.bazel  __init__.py  context.py
