"""Bazel module definition for test_sets_bazel_rules."""

module(
    name = "test_sets_bazel_rules",
    version = "0.1.0",
)

# Python toolchain via rules_python
bazel_dep(name = "rules_python", version = "1.7.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.12",
    is_default = True,
)
