load("@rules_python//python:defs.bzl", "py_binary", "py_library")

py_library(
    name = "orchestrator_lib",
    srcs = glob(
        ["*.py"],
        exclude = ["*_test.py"],
    ),
    imports = [".."],
    visibility = ["//visibility:public"],
    deps = ["@pypi//pyyaml"],
)

py_binary(
    name = "main",
    srcs = ["main.py"],
    main = "main.py",
    deps = [":orchestrator_lib"],
)
